# HAN2324-AIL-LAB-Tooling

./: README.md
eml-course-main/: .gitignore  AI · GitLab.url  README.md  build.sh  example_projects.md
eml-course-main/faq/: Configure VScode to use GCC and make.md  embedded machine learning.docx  glossary.md
eml-course-main/lib/: features.c  features.h  filters.c  filters.h  normalizations.c  normalizations.h
eml-course-main/sheets/images/: signal_features.py  signal_filters.py
eml-course-main/targets/arduino-nano-33-BLE/: platformio.ini
eml-course-main/targets/arduino-nano-33-BLE/include/: features.h
eml-course-main/targets/arduino-nano-33-BLE/src/: main.cpp
eml-course-main/targets/frdm-kl25z/demo/: demo.uvoptx  demo.uvprojx
eml-course-main/targets/nucleo-f411re/demo/: .cproject  .project  (+1 more)
eml-course-main/template/: todo {YEAR}_{YOUR GROUP_NUMBER}_AI_report_{YOUR_NAME}_{YOUR_STUDENT_NUMBER}.docx
eml-course-main/tools/: config.py  custom_bunch.py  requirements.txt
eml-course-main/tools/capturing/: comport_tools.py  data_logger.py  data_plotter.py  data_recorder.py  timestamp_inspector.py
eml-course-main/tools/model_building/: build_dtc.py  build_svm_UNDER_CONSTRUCTION_.py  visualize_clf.py
eml-course-main/tools/model_embedding/: code_generator_dtc2c.py
fpos_visualizer_2/: 19524-testCPR-correct-low_fp.csv  data_player.py  form.ui  optimal.csv  ui_form.py  widget.py
model_tester_app/: .gitignore  CMakeLists.txt  config.h  main.c
model_tester_app/dtc/: dtc_model.c  dtc_model.c.bak
model_tester_app/lib/: features_calc.c  features_calc.h
(+95 files in other folders)
